# social_intelligence_substrate

./: .dockerignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate.py
app/: __init__.py  baseline.py  environment.py  grader.py  graph.py  models.py  npc_agents.py  server.py  tasks.py
server/: app.py
tests/: test_baseline.py  test_environment.py  test_grader.py  test_graph.py  test_server.py
