[project]
name = "social-intelligence-substrate"
version = "1.0.0"
description = "A graph-native OpenEnv environment for evaluating AI social intelligence through structured economic interactions"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.3",
    "networkx==3.2.1",
    "openai>=1.6.1",
    "python-dotenv==1.0.0",
    "httpx==0.25.2",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = ["pytest==7.4.4"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
